[package]
name = "tracemsgextractor"
version = "0.1.0"
authors = ["Jon Levell <levell@uk.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "0.2"
libmath = "0.2"
json = "0.12"
alphanumeric-sort = "1.4"
clap = "3.0.0-beta.2"
chrono = { version = "0.4"}
#cmd_lib = "0.8.4"
